--- a/.env.prod
+++ b/.env.prod
@@ -10,8 +10,9 @@ DB_NAME=desafioZ1
 HOST_PORT=5000
 
 #Definição de JWT e Chaves
-JWT_KEYSTORE_QNT=5
-JWT_KEY_SIZE=2048
+#JWT_KEYSTORE_QNT=5
+#JWT_KEY_SIZE=2048
+JWT_KEY=THIS_IS_A_SECRET_KEY
 JWT_ISSUER=http://desafioZ1.exemplo.com.br/license
 JWT_AUDIENCE=http://desafioZ1.exemplo
 JWT_DURATION=7200 #2*60*60 - 2hours
