--- a/package.json
+++ b/package.json
@@ -28,10 +28,16 @@
     "@mikro-orm/reflection": "^6.4.0",
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.4.4",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.4",
     "@nestjs/throttler": "^6.2.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "helmet": "^8.0.0",
+    "passport": "^0.7.0",
+    "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
   },
@@ -41,9 +47,12 @@
     "@nestjs/testing": "^10.3.2",
     "@swc/cli": "^0.3.9",
     "@swc/core": "^1.4.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
+    "@types/passport-http": "^0.3.11",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
