--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "set NODE_ENV=development && nest start",
     "start:dev": "set NODE_ENV=development && nest start --watch",
     "start:debug": "set NODE_ENV=development && nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "nest build && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@mikro-orm/core": "^6.4.0",
+    "@mikro-orm/migrations": "^6.4.0",
     "@mikro-orm/mysql": "^6.4.0",
     "@mikro-orm/reflection": "^6.4.0",
     "@nestjs/common": "^10.3.2",
