--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@nestjs/platform-express": "^10.4.4",
     "@nestjs/throttler": "^6.2.1",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "helmet": "^8.0.0",
     "passport": "^0.7.0",
